--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../src/app/core/mixins.scss';
+@import '../src/app/core/variables.scss';
+
+@font-face {
+  font-family: 'Roboto Regular';
+  src: url('../src/assets/fonts/Roboto-Regular.ttf') format('truetype');
+}
+
+body{
+  font-family: 'Roboto Regular', sans-serif;
+  margin: 0px;
+  padding: 0px;
+}
