--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,7 @@
-<p>main works!</p>
+<main class="main">
+  <div class="main-info">
+    <h1 class="main-info__title">¡BIENVENIDO A MYAVIANCA!</h1>
+    <p class="main-info__text" >Al estar activo podrás gestionar tus viajes, conocer novedades, elegir tus preferencias y mucho más.</p>
+  </div>
+
+</main>
