--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,16 @@
   src: url('../src/assets/fonts/Roboto-Regular.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Static';
+  src: url('../src/assets/fonts/Static.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Lato Regular';
+  src: url('../src/assets/fonts/Lato-Regular.ttf') format('truetype');
+}
+
 body{
   font-family: 'Roboto Regular', sans-serif;
   margin: 0px;
