--- a/src/app/core/variables.scss
+++ b/src/app/core/variables.scss
@@ -1,2 +1,4 @@
 $header-background-color: #FFFFFF;
 $main-background-color: #FAFAFA;
+$login-dividing-line-color: #5A5A5A;
+$login-button-background-color: #1B1B1B;
