--- a/css/header.component.css
+++ b/css/header.component.css
@@ -1,36 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+/* Mixin to set flex align and justify content property */
 @font-face {
-  font-family: "Roboto Regular";
-  src: url("../src/assets/fonts/Roboto-Regular.ttf") format("truetype");
+  font-family: "Static";
+  src: url("../src/assets/fonts/Static.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Lato Regular";
+  src: url("../src/assets/fonts/Lato-Regular.ttf") format("truetype");
 }
 body {
-  font-family: "Roboto Regular", sans-serif;
+  font-family: "Lato Regular", sans-serif;
   margin: 0px;
   padding: 0px;
 }
 
-/* Styles for the website header section on mobile */
+/* Styles for the website header section on desktop */
 .header {
   background-color: #FFFFFF;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 70px;
 }
 .header .header__logo {
-  padding: 0px;
+  padding: 15px 0px 10px 95px;
 }
 
-@media (min-width: 992px) {
-  /* Styles for the website header section on desktop */
+@media (max-width: 992px) {
+  /* Styles for the website header section on mobile */
   .header {
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     height: 70px;
   }
   .header .header__logo {
-    padding: 15px 0px 10px 95px;
+    padding: 0px;
   }
 }/*# sourceMappingURL=header.component.css.map */
