--- a/css/main.component.css
+++ b/css/main.component.css
@@ -1,10 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /* Mixin to set flex align and justify content property */
 @font-face {
-  font-family: "Roboto Regular";
-  src: url("../src/assets/fonts/Roboto-Regular.ttf") format("truetype");
-}
-@font-face {
   font-family: "Static";
   src: url("../src/assets/fonts/Static.ttf") format("truetype");
 }
@@ -13,13 +9,18 @@
   src: url("../src/assets/fonts/Lato-Regular.ttf") format("truetype");
 }
 body {
-  font-family: "Roboto Regular", sans-serif;
+  font-family: "Lato Regular", sans-serif;
   margin: 0px;
   padding: 0px;
 }
 
 .main {
   background-color: #FAFAFA;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* Styles for the title container and informational text on desktop*/
+  /* Styles for the main image container and the web page login form on desktop*/
 }
 .main .main-info {
   display: flex;
@@ -37,4 +38,166 @@ body {
   margin-top: 10px;
   font-family: "Lato Regular", sans-serif;
   font-size: 18px;
+}
+.main .main-card {
+  margin: 40px 170px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  overflow: hidden;
+  background-color: #FFFFFF;
+  border-radius: 20px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.199);
+}
+.main .main-card .main-card-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main .main-card .main-card-login {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0px 50px;
+  width: 440px;
+}
+.main .main-card .main-card-login .main-card-login-account .main-card-login-account__title {
+  color: #2A2D2F;
+  margin: 0px;
+  margin-bottom: 30px;
+}
+.main .main-card .main-card-login .main-card-login-account .main-card-login-account-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+}
+.main .main-card .main-card-login .main-card-login-account .main-card-login-account-button .main-card-login-account-button__btn {
+  border-radius: 30px;
+  padding: 5px 40px;
+  margin-right: 15px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Lato Regular", sans-serif;
+  border: 2px solid black;
+  margin-bottom: 0px;
+  background-color: #FFFFFF;
+}
+.main .main-card .main-card-login .main-card-login-account .main-card-login-account-button .main-card-login-account-button__btn:hover {
+  background-color: rgba(180, 180, 180, 0.363);
+  transition: 0.5s ease;
+}
+.main .main-card .main-card-login .main-card-login-account .main-card-login-account-button .main-card-login-account-button__btn .main-card-login-account-button__btn--icon {
+  margin-right: 15px;
+}
+.main .main-card .main-card-login .main-card-login-account .main-card-login-account-button .main-card-login-account-button__btn:last-child {
+  margin-right: 0;
+}
+.main .main-card .main-card-login .main-card-login-divider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0px;
+}
+.main .main-card .main-card-login .main-card-login-divider .main-card-login-divider__line {
+  width: 30%;
+}
+.main .main-card .main-card-login .main-card-login-divider .main-card-login-divider__text {
+  white-space: nowrap;
+  font-size: 14px;
+  margin: 10px;
+  color: #5A5A5A;
+}
+.main .main-card .main-card-login .main-card-login-input .main-card-login-input-user {
+  border: 1px solid #D9D9D9;
+  border-radius: 5px;
+  padding: 10px 10px;
+}
+.main .main-card .main-card-login .main-card-login-input .main-card-login-input-user .main-card-login-input-user__title {
+  font-size: 11px;
+  color: #5A5A5A;
+  font-weight: bold;
+  margin: 5px 0px;
+}
+.main .main-card .main-card-login .main-card-login-input .main-card-login-input-user .main-card-login-input-user__text {
+  font-weight: bold;
+  margin: 0px;
+}
+.main .main-card .main-card-login .main-card-login-input .main-card-login-input-password {
+  border: 1px solid #D9D9D9;
+  border-radius: 5px;
+  margin: 15px 0px;
+  padding: 10px 10px;
+}
+.main .main-card .main-card-login .main-card-login-input .main-card-login-input-password .main-card-login-input-password__title {
+  font-size: 11px;
+  color: #5A5A5A;
+  font-weight: bold;
+  margin: 5px 0px;
+}
+.main .main-card .main-card-login .main-card-login-input .main-card-login-input-password .main-card-login-input-password__text {
+  font-weight: 600;
+  font-size: 17px;
+  margin: 0px;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+.main .main-card .main-card-login .main-card-login-input .main-card-login-input-password .main-card-login-input-password__text .main-card-login-input-password__text--icon {
+  display: flex;
+  align-items: baseline;
+  padding-right: 20px;
+}
+.main .main-card .main-card-login .main-card-login-alert .main-card-login-alert__lifemiles {
+  cursor: pointer;
+}
+.main .main-card .main-card-login .main-card-login-alert .main-card-login-alert__lifemiles .main-card-login-alert__lifemiles--link {
+  color: #34b7c9;
+}
+.main .main-card .main-card-login .main-card-login-alert .main-card-login-alert__policy {
+  font-size: 12px;
+  margin: 30px 0px;
+  cursor: pointer;
+}
+.main .main-card .main-card-login .main-card-login-alert .main-card-login-alert__policy .main-card-login-alert__policy--link {
+  color: #34b7c9;
+}
+.main .main-card .main-card-login .main-card-login-btn {
+  display: flex;
+  flex-direction: column;
+}
+.main .main-card .main-card-login .main-card-login-btn .main-card-login-btn__login {
+  border-radius: 30px;
+  font-family: "Lato Regular", sans-serif;
+  padding: 10px 160px;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: #1B1B1B;
+  color: #FFFFFF;
+  border: 2px solid #1B1B1B;
+}
+.main .main-card .main-card-login .main-card-login-btn .main-card-login-btn__login:hover {
+  background-color: #424040;
+  transition: 0.5s ease;
+  border: 2px solid #424040;
+}
+.main .main-card .main-card-login .main-card-login-btn .main-card-login-btn__account {
+  border-radius: 30px;
+  font-family: "Lato Regular", sans-serif;
+  padding: 10px 160px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 25px;
+  white-space: nowrap;
+  border: 2px solid #1B1B1B;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main .main-card .main-card-login .main-card-login-btn .main-card-login-btn__account:hover {
+  background-color: rgba(180, 180, 180, 0.363);
+  transition: 0.5s ease;
 }/*# sourceMappingURL=main.component.css.map */
