--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /* Mixin to set flex align and justify content property */
 @font-face {
-  font-family: "Roboto Regular";
-  src: url("../src/assets/fonts/Roboto-Regular.ttf") format("truetype");
-}
-@font-face {
   font-family: "Static";
   src: url("../src/assets/fonts/Static.ttf") format("truetype");
 }
@@ -13,7 +9,7 @@
   src: url("../src/assets/fonts/Lato-Regular.ttf") format("truetype");
 }
 body {
-  font-family: "Roboto Regular", sans-serif;
+  font-family: "Lato Regular", sans-serif;
   margin: 0px;
   padding: 0px;
 }/*# sourceMappingURL=styles.css.map */
