--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -2,7 +2,11 @@
 
 .main{
   background-color: $main-background-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  /* Styles for the title container and informational text on desktop*/
   .main-info{
     display: flex;
     align-items: center;
@@ -20,6 +24,211 @@
       margin-top: 10px;
       font-family: 'Lato Regular', sans-serif;
       font-size: 18px;
+    }
+  }
+
+  /* Styles for the main image container and the web page login form on desktop*/
+  .main-card{
+    margin: 40px 170px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    overflow: hidden;
+    background-color: $header-background-color;
+    border-radius: 20px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.199);
+
+    .main-card-image {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .main-card-login{
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      margin: 0px 50px;
+      width: 440px;
+
+      .main-card-login-account{
+
+        .main-card-login-account__title{
+          color: #2A2D2F;
+          margin: 0px;
+          margin-bottom: 30px;
+        }
+
+        .main-card-login-account-button{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          white-space: nowrap;
+
+          .main-card-login-account-button__btn{
+            border-radius: 30px;
+            padding: 5px 40px;
+            margin-right: 15px;
+            display: flex;
+            align-items: center;
+            font-size: 20px;
+            font-weight: bold;
+            font-family: 'Lato Regular', sans-serif;
+            border: 2px solid black;
+            margin-bottom: 0px;
+            background-color: $header-background-color;
+
+            &:hover{
+              background-color: rgba(180, 180, 180, 0.363);
+              transition: 0.5s ease;
+            }
+
+            .main-card-login-account-button__btn--icon{
+              margin-right: 15px;
+            }
+          }
+
+          .main-card-login-account-button__btn:last-child {
+            margin-right: 0;
+          }
+        }
+
+      }
+
+      .main-card-login-divider{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 10px 0px;
+
+        .main-card-login-divider__line{
+          width: 30%;
+        }
+
+        .main-card-login-divider__text{
+          white-space: nowrap;
+          font-size: 14px;
+          margin: 10px;
+          color: $login-dividing-line-color;
+        }
+      }
+
+      .main-card-login-input{
+
+        .main-card-login-input-user{
+
+          border: 1px solid #D9D9D9;
+          border-radius: 5px;
+          padding: 10px 10px;
+
+          .main-card-login-input-user__title{
+            font-size: 11px;
+            color: $login-dividing-line-color;
+            font-weight: bold;
+            margin: 5px 0px;
+
+          }
+
+          .main-card-login-input-user__text{
+            font-weight: bold;
+            margin: 0px;
+          }
+        }
+
+        .main-card-login-input-password{
+
+          border: 1px solid #D9D9D9;
+          border-radius: 5px;
+          margin: 15px 0px;
+          padding: 10px 10px;
+
+          .main-card-login-input-password__title{
+            font-size: 11px;
+            color: $login-dividing-line-color;
+            font-weight: bold;
+            margin: 5px 0px;
+          }
+
+          .main-card-login-input-password__text{
+            font-weight: 600;
+            font-size: 17px;
+            margin: 0px;
+            display: flex;
+            align-items: baseline;
+            justify-content: space-between;
+
+            .main-card-login-input-password__text--icon{
+              display: flex;
+              align-items:baseline;
+              padding-right: 20px;
+            }
+
+          }
+        }
+      }
+
+      .main-card-login-alert{
+
+        .main-card-login-alert__lifemiles{
+          cursor: pointer;
+
+          .main-card-login-alert__lifemiles--link{
+            color: #34b7c9;
+          }
+        }
+
+        .main-card-login-alert__policy{
+          font-size: 12px;
+          margin: 30px 0px;
+          cursor: pointer;
+
+          .main-card-login-alert__policy--link{
+            color: #34b7c9;
+          }
+        }
+      }
+
+      .main-card-login-btn{
+        display: flex;
+        flex-direction: column;
+
+        .main-card-login-btn__login{
+          border-radius: 30px;
+          font-family: 'Lato Regular', sans-serif;
+          padding: 10px 160px;
+          font-size: 20px;
+          font-weight: 600;
+          background-color:$login-button-background-color ;
+          color: $header-background-color;
+          border: 2px solid $login-button-background-color;
+
+          &:hover{
+            background-color: #424040;
+            transition: 0.5s ease;
+            border: 2px solid #424040 ;
+          }
+        }
+
+        .main-card-login-btn__account{
+          border-radius: 30px;
+          font-family: 'Lato Regular', sans-serif;
+          padding: 10px 160px;
+          font-size: 20px;
+          font-weight: 600;
+          margin-top: 25px;
+          white-space: nowrap;
+          border: 2px solid $login-button-background-color;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          &:hover{
+            background-color: rgba(180, 180, 180, 0.363);
+            transition: 0.5s ease;
+          }
+        }
+      }
     }
   }
 }
