--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -10,7 +10,8 @@
   <!-- Container for the main image, and the form to log in to the web page -->
   <div class="main-card">
     <div class="main-card-image">
-      <img class="main-card-image__img" src="../../../assets/images/main-image.png" alt="main image">
+      <img class="main-card-image__img--desktop" src="../../../assets/images/main-image-desktop.png" alt="main image">
+      <img class="main-card-image__img--mobile" src="../../../assets/images/main-image-mobile.png" alt="main image">
     </div>
 
     <div class="main-card-login">
@@ -45,16 +46,27 @@
       <div class="main-card-login-input">
         <div class="main-card-login-input-user">
           <p class="main-card-login-input-user__title">Usuario o número LifeMiles</p>
-          <p class="main-card-login-input-user__text">Jerónimo Martínez</p>
+          <input class="main-card-login-input-user__title--mobile" type="text" placeholder="Usuario o número LifeMiles">
+          <input class="main-card-login-input-user__text" type="text" value="Jerónimo Martínez">
         </div>
 
         <div class="main-card-login-input-password">
           <p class="main-card-login-input-password__title">Contraseña</p>
-          <p class="main-card-login-input-password__text">*********************
-            <svg class="main-card-login-input-password__text--icon" width="23" height="15" viewBox="0 0 23 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+          <div class="main-card-login-input-password-mobile">
+            <input class="main-card-login-input-password-mobile__title" type="text" placeholder="Contraseña">
+            <svg class="main-card-login-input-password-mobile__icon" width="23" height="15" viewBox="0 0 23 15" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M11.7539 12C13.0039 12 14.0666 11.5627 14.9419 10.688C15.8166 9.81267 16.2539 8.75 16.2539 7.5C16.2539 6.25 15.8166 5.18733 14.9419 4.312C14.0666 3.43733 13.0039 3 11.7539 3C10.5039 3 9.44124 3.43733 8.56591 4.312C7.69124 5.18733 7.25391 6.25 7.25391 7.5C7.25391 8.75 7.69124 9.81267 8.56591 10.688C9.44124 11.5627 10.5039 12 11.7539 12ZM11.7539 10.2C11.0039 10.2 10.3666 9.93733 9.84191 9.412C9.31657 8.88733 9.05391 8.25 9.05391 7.5C9.05391 6.75 9.31657 6.11233 9.84191 5.587C10.3666 5.06233 11.0039 4.8 11.7539 4.8C12.5039 4.8 13.1416 5.06233 13.6669 5.587C14.1916 6.11233 14.4539 6.75 14.4539 7.5C14.4539 8.25 14.1916 8.88733 13.6669 9.412C13.1416 9.93733 12.5039 10.2 11.7539 10.2ZM11.7539 15C9.32057 15 7.10391 14.3207 5.10391 12.962C3.10391 11.604 1.65391 9.78333 0.753906 7.5C1.65391 5.21667 3.10391 3.39567 5.10391 2.037C7.10391 0.679 9.32057 0 11.7539 0C14.1872 0 16.4039 0.679 18.4039 2.037C20.4039 3.39567 21.8539 5.21667 22.7539 7.5C21.8539 9.78333 20.4039 11.604 18.4039 12.962C16.4039 14.3207 14.1872 15 11.7539 15Z" fill="#5A5A5A"/>
             </svg>
-          </p>
+          </div>
+
+          <div class="main-card-login-input-password-desktop">
+            <input class="main-card-login-input-password-desktop__text" type="text" value="********************* ">
+            <svg class="main-card-login-input-password-desktop__icon" width="23" height="15" viewBox="0 0 23 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.7539 12C13.0039 12 14.0666 11.5627 14.9419 10.688C15.8166 9.81267 16.2539 8.75 16.2539 7.5C16.2539 6.25 15.8166 5.18733 14.9419 4.312C14.0666 3.43733 13.0039 3 11.7539 3C10.5039 3 9.44124 3.43733 8.56591 4.312C7.69124 5.18733 7.25391 6.25 7.25391 7.5C7.25391 8.75 7.69124 9.81267 8.56591 10.688C9.44124 11.5627 10.5039 12 11.7539 12ZM11.7539 10.2C11.0039 10.2 10.3666 9.93733 9.84191 9.412C9.31657 8.88733 9.05391 8.25 9.05391 7.5C9.05391 6.75 9.31657 6.11233 9.84191 5.587C10.3666 5.06233 11.0039 4.8 11.7539 4.8C12.5039 4.8 13.1416 5.06233 13.6669 5.587C14.1916 6.11233 14.4539 6.75 14.4539 7.5C14.4539 8.25 14.1916 8.88733 13.6669 9.412C13.1416 9.93733 12.5039 10.2 11.7539 10.2ZM11.7539 15C9.32057 15 7.10391 14.3207 5.10391 12.962C3.10391 11.604 1.65391 9.78333 0.753906 7.5C1.65391 5.21667 3.10391 3.39567 5.10391 2.037C7.10391 0.679 9.32057 0 11.7539 0C14.1872 0 16.4039 0.679 18.4039 2.037C20.4039 3.39567 21.8539 5.21667 22.7539 7.5C21.8539 9.78333 20.4039 11.604 18.4039 12.962C16.4039 14.3207 14.1872 15 11.7539 15Z" fill="#5A5A5A"/>
+            </svg>
+          </div>
+
 
         </div>
       </div>
