--- a/css/header.component.css
+++ b/css/header.component.css
@@ -14,28 +14,28 @@ body {
   padding: 0px;
 }
 
-/* Styles for the website header section on desktop */
+/* Styles for the website header section on mobile */
 .header {
   background-color: #FFFFFF;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   height: 70px;
 }
 .header .header__logo {
-  padding: 15px 0px 10px 95px;
+  padding: 0px;
 }
 
-@media (max-width: 992px) {
-  /* Styles for the website header section on mobile */
+@media (min-width: 992px) {
+  /* Styles for the website header section on desktop */
   .header {
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     height: 70px;
   }
   .header .header__logo {
-    padding: 0px;
+    padding: 15px 0px 10px 95px;
   }
 }/*# sourceMappingURL=header.component.css.map */
