--- a/css/mixins.css
+++ b/css/mixins.css
@@ -1,1 +1,5 @@
-/* Mixin to set flex align and justify content property *//*# sourceMappingURL=mixins.css.map */
+/* Mixin to set flex align and justify content properties */
+/* mixin to set background color and border radius properties*/
+/* mixin to set border, outline and font size properties*/
+/*mixin to set the number of columns */
+/*mixin to set the direction of elements *//*# sourceMappingURL=mixins.css.map */
