The structure is added to the footer component, styles are also added, and it adapts to mobile devices

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="footer">
+  <img class="footer__aeronautica--desktop" src="../../../assets/images/aeronautica-logo.png" alt="Aeronautica logo">
+  <img class="footer__aeronautica--mobile" src="../../../assets/images/aeronautica-logo-mobile.png" alt="Aeronautica logo">
+  <img class="footer__star-alliance--desktop" src="../../../assets/images/star-alliance-logo.png" alt="Star alliance logo">
+  <img class="footer__star-alliance--mobile" src="../../../assets/images/star-alliance-logo-mobile.png" alt="Star alliance logo">
+  <img class="footer__st--desktop" src="../../../assets/images/st-logo.png" alt="super transporte logo">
+  <img class="footer__st--mobile" src="../../../assets/images/st-logo-mobile.png" alt="super transporte logo">
+</footer>
