Comments added to the code

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,4 @@
+<!-- In this component you can find the images corresponding to the government regimes by which the Avianca airline is approved -->
 <footer class="footer">
   <img class="footer__aeronautica--desktop" src="../../../assets/images/aeronautica-logo.png" alt="Aeronautica logo">
   <img class="footer__aeronautica--mobile" src="../../../assets/images/aeronautica-logo-mobile.png" alt="Aeronautica logo">
